--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,4 @@
 MONGO_URI = mongodb+srv://js-backend:your-password@cluster0.llupytm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT = 8000
+
+# CORS_ORIGIN =*
