all setup configured

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,18 @@
-MONGO_URI = mongodb+srv://js-backend:your-password@cluster0.llupytm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI = mongodb+srv://js-backend:js$backend@cluster0.llupytm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT = 8000
 
 # CORS_ORIGIN =*
+
+# Access token
+ACCESS_TOKEN_SECRET = your-token
+
+ACCESS_TOKEN_EXPIRY = 1d
+
+# Refresh token
+
+REFRESH_TOKEN_SECRET = your-token
+REFRESH_TOKEN_EXPIRY =10
+
+CLOUDINARY_CLOUD_NAME= "",
+CLOUDINARY_API_KEY= "",
+CLOUDINARY_API_SECRET=""
