--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-MONGO_URI = mongodb+srv://js-backend:js$backend@cluster0.llupytm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI = mongodb+srv://js-backend:your-password@cluster0.llupytm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT = 8000
 
 # CORS_ORIGIN =*
